<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
  <item android:id="@+id/action_stream"
        android:title="@string/action_stream"
        android:orderInCategory="100"
        android:icon="@drawable/action_stream_dark"
        android:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never" />
  <item android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
