<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:layout_height="match_parent"
    tools:context="macbury.enklawa.activities.DonateActivity">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">
    <LinearLayout
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/donate_title"
        android:id="@+id/text_running_total_time" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donate_summary"
        android:id="@+id/text_running_time" android:layout_below="@+id/text_running_total_time"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donate_help_develop"
        android:id="@+id/textView3" android:layout_below="@+id/text_running_time"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"/>
      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_github"
        android:id="@+id/button_github" android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView3" android:layout_alignEnd="@+id/textView3"/>
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/donate_help_bitcoin" android:id="@+id/textView4"
                android:layout_marginTop="27dp" android:layout_below="@+id/button_github"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_donate_title"
        android:id="@+id/button_donate"
        android:layout_below="@+id/textView4" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" android:layout_marginTop="10dp"/>
    </LinearLayout>
  </ScrollView>
</RelativeLayout>
